--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-    "name": "This is Inline Search Bot by @GreyMatter_Bots",
-    "description": "This is Inline Channel Messages Search Bot by @GreyMatter_Bots",
+    "name": "This is Inline Search Bot by @greymatters_about",
+    "description": "This is Inline Channel Messages Search Bot by @greymatters_about",
     "keywords": [
         "telegram",
         "channel",
@@ -9,8 +9,8 @@
         "bot"
     ],
     "repository": "https://github.com/GreyMattersBot",
-    "website": "https://telegram.dog/GreyMatter_Bots",
-    "success_url": "https://t.me/GreyMatter_Bot",
+    "website": "https://telegram.dog/greymatters_about",
+    "success_url": "https://t.me/greymatters_about",
     "env": {
         "API_ID": {
             "description": "Get this value from my.telegram.org or @USERS_RO_BOT"
@@ -40,7 +40,7 @@
             "description": "MongoDB Database URI for Saving UserID for Broadcast."
         },
         "UPDATES_CHANNEL": {
-            "description": "ID of a Channel which you want to do Force Sub to use the bot. Example: -1001669443507",
+            "description": "ID of a Channel which you want to do Force Sub to use the bot. Example: -1002321506152",
             "required": false
         },
         "CHANNEL_ID": {
